refactor: refactor UsableSprinklerDataProcessorImpl.java with 优化可用仓代码