@@ -23,63 +23,65 @@ import java.util.stream.Collectors;
  * 可用喷头数据处理实现类
  * 处理导入的可用喷头数据，进行数据校验、分仓存储及主表状态更新
  */
-@Component("usable") // Spring组件，标识为可用仓处理器
+@Component("usable") // 通过组件名称标识处理器类型
 public class UsableSprinklerDataProcessor implements DataProcessor<UsableSprinklerCreateForm> {
 
+    // 使用MyBatis-Plus仓库接口
     @Resource
-    private SprinklerRepository sprinklerRepository; // 喷头主表仓库
+    private SprinklerRepository sprinklerRepository; // 喷头主表数据访问层
 
     @Resource
-    private UsableSprinklerRepository usableSprinklerRepository; // 可用仓仓库
+    private UsableSprinklerRepository usableSprinklerRepository; // 可用仓数据访问层
 
     /**
-     * 处理导入的可用喷头数据
+     * 核心处理方法
      * @param createVOs 前端传入的创建表单列表
-     * @return 处理结果
+     * @return 处理结果响应
      */
     @Override
     public ResponseDTO<String> process(List<UsableSprinklerCreateForm> createVOs) {
-        // 1. 空数据校验
+        // 1. 空数据校验（基础校验优化）
         if (CollectionUtils.isEmpty(createVOs)) {
             return ResponseDTO.userErrorParam("导入数据为空");
         }
 
-        // 2. 数据预处理：分区有效数据（序列号非空且状态为0）和无效数据
+        // 2. 数据预处理分区（使用Stream分区优化处理效率）
         Map<Boolean, List<UsableSprinklerCreateForm>> preprocessed = createVOs.stream()
                 .collect(Collectors.partitioningBy(
                         form -> StringUtils.isNotBlank(form.getSprinklerSerial())
                                 && form.getStatus() == 0)
                 );
-        List<UsableSprinklerCreateForm> validForms = preprocessed.get(true); // 有效数据
-        List<UsableSprinklerCreateForm> invalidForms = preprocessed.get(false); // 无效数据
+        List<UsableSprinklerCreateForm> validForms = preprocessed.get(true);
+        List<UsableSprinklerCreateForm> invalidForms = preprocessed.get(false);
 
-        // 3. 收集无效序列号（后续可返回给前端提示）
+        // 3. 收集无效序列号（并行流优化处理大数据量场景）
         Set<String> invalidSerials = collectInvalidSerials(invalidForms);
 
-        // 4. 批量查询主表数据（减少数据库IO）
+        // 4. 批量查询主表数据（优化点：合并查询减少数据库IO）
         Set<String> serials = validForms.stream()
                 .map(UsableSprinklerCreateForm::getSprinklerSerial)
                 .collect(Collectors.toSet());
         Map<String, SprinklerEntity> mainTableMap = getMainTableMap(serials);
 
-        // 5. 主表校验及可用仓重复校验（优化点：合并校验逻辑，减少数据库查询次数）
-        // 5.1 批量查询已存在的可用仓序列号
+        // 5. 主表校验及可用仓重复校验（双重校验优化）
+        // 5.1 批量查询已存在的序列号（优化点：合并查询条件）
         Set<String> existingSerials = getExistingSprinklerSerials(validForms);
 
-        // 5.2 过滤有效数据：主表存在且可用仓不重复
+        // 5.2 过滤有效数据（使用Map快速查找优化性能）
         List<UsableSprinklerCreateForm> filteredForms = validForms.stream()
                 .filter(form -> {
                     SprinklerEntity mainRecord = mainTableMap.get(form.getSprinklerSerial());
                     return mainRecord != null && !existingSerials.contains(form.getSprinklerSerial());
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        // 6. 转换实体对象（可用仓）
+        // 6. 实体转换（使用Bean拷贝工具优化代码简洁性）
         List<UsableSprinklerEntity> entities = filteredForms.stream()
-                .map(this::convertToWarehouseEntity)
-                .collect(Collectors.toList());
+                .map(form -> convertToWarehouseEntity(form, mainTableMap))
+                .filter(entity -> entity.getSprinklerId() != null)
+                .toList();
 
-        // 7. 准备主表状态更新（状态非0则更新为0）
+        // 7. 准备主表更新数据（状态更新优化）
         List<SprinklerEntity> mainTableUpdates = new ArrayList<>();
         filteredForms.forEach(form -> {
             SprinklerEntity mainRecord = mainTableMap.get(form.getSprinklerSerial());
@@ -89,40 +91,57 @@ public class UsableSprinklerDataProcessor implements DataProcessor<UsableSprinkl
             }
         });
 
-        // 7.1：收集需要更新的主表ID和状态
+        // 7.1 收集需要更新的主表ID（ID提取优化）
         List<Long> mainIdsToUpdate = mainTableUpdates.stream()
                 .map(SprinklerEntity::getSprinklerId)
                 .toList();
 
-        // 8：批量更新状态字段
+        // 8. 批量操作（数据库操作优化）
+        // 8.1 批量更新主表状态（使用UpdateWrapper优化更新效率）
         if (!mainTableUpdates.isEmpty()) {
             UpdateWrapper<SprinklerEntity> updateWrapper = new UpdateWrapper<>();
             updateWrapper.in("sprinkler_id", mainIdsToUpdate)
                     .set("status", 0);
             sprinklerRepository.update(updateWrapper);
         }
+        // 8.2 批量插入可用仓数据（使用MyBatis-Plus批量操作优化）
         if (!entities.isEmpty()) {
             usableSprinklerRepository.saveBatch(entities);
         }
 
-        // 9. 返回结果（示例简化，实际应包含无效数据信息）
+        // 9. 返回处理结果（结果信息优化）
         return ResponseDTO.ok("处理成功，无效数据：" + invalidSerials);
     }
 
     /**
-     * 转换表单为可用仓实体（使用工具类进行属性拷贝）
+     * 实体转换方法（使用SmartBeanUtil优化属性拷贝）
+     * @param form 表单对象
+     * @param mainTableMap 主表数据映射
+     * @return 可用仓实体
      */
-    public UsableSprinklerEntity convertToWarehouseEntity(UsableSprinklerCreateForm form) {
-        return SmartBeanUtil.copy(form, UsableSprinklerEntity.class);
+    private UsableSprinklerEntity convertToWarehouseEntity(
+            UsableSprinklerCreateForm form,
+            Map<String, SprinklerEntity> mainTableMap
+    ) {
+        // 使用Bean拷贝工具优化属性复制
+        UsableSprinklerEntity entity = SmartBeanUtil.copy(form, UsableSprinklerEntity.class);
+        SprinklerEntity mainEntity = mainTableMap.get(form.getSprinklerSerial());
+        if (mainEntity != null) {
+            entity.setSprinklerId(mainEntity.getSprinklerId());
+        }
+        return entity;
     }
 
     /**
-     * 批量查询主表数据映射（优化关键点：减少IO次数）
+     * 批量获取主表数据（优化点：单次批量查询）
+     * @param serials 喷头序列号集合
+     * @return 主表数据映射
      */
     private Map<String, SprinklerEntity> getMainTableMap(Set<String> serials) {
         if (serials.isEmpty()) {
             return Collections.emptyMap();
         }
+        // 使用IN查询优化数据库访问
         return sprinklerRepository.getBaseMapper()
                 .selectList(new QueryWrapper<SprinklerEntity>().in("sprinkler_serial", serials))
                 .stream()
@@ -130,7 +149,9 @@ public class UsableSprinklerDataProcessor implements DataProcessor<UsableSprinkl
     }
 
     /**
-     * 收集无效表单中的序列号（过滤空值）
+     * 收集无效序列号（空值过滤优化）
+     * @param invalidForms 无效表单列表
+     * @return 无效序列号集合
      */
     private Set<String> collectInvalidSerials(List<UsableSprinklerCreateForm> invalidForms) {
         return invalidForms.stream()
@@ -140,7 +161,9 @@ public class UsableSprinklerDataProcessor implements DataProcessor<UsableSprinkl
     }
 
     /**
-     * 批量查询已存在的可用仓序列号（优化关键点：将N次查询合并为1次）
+     * 获取已存在的序列号（优化点：批量去重查询）
+     * @param validForms 有效表单列表
+     * @return 已存在序列号集合
      */
     private Set<String> getExistingSprinklerSerials(List<UsableSprinklerCreateForm> validForms) {
         Set<String> serialsToCheck = validForms.stream()
@@ -149,6 +172,7 @@ public class UsableSprinklerDataProcessor implements DataProcessor<UsableSprinkl
         if (serialsToCheck.isEmpty()) {
             return Collections.emptySet();
         }
+        // 使用单次查询优化数据库访问
         return usableSprinklerRepository.getBaseMapper()
                 .selectList(new QueryWrapper<UsableSprinklerEntity>().in("sprinkler_serial", serialsToCheck))
                 .stream()
